# app-state

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
crates/app-state/: Cargo.toml
crates/app-state-macros/: Cargo.toml  README.md
crates/app-state-macros/src/: lib.rs  util.rs
crates/app-state-macros/src/util/: mod.rs  path.rs  stateful.rs
crates/app-state/src/: lib.rs
crates/app-state/src/states/: app_state.rs  mod.rs  mut_app_state_lock.rs  mutable_app_state.rs  traits.rs
crates/app-state/src/tests/: default_init_tests.rs  init_tests.rs  injection_tests.rs  manual_tests.rs  mod.rs  util.rs
crates/app-state/src/tests/lock/: injection_tests.rs  mod.rs
crates/app-state/src/tests/mutable/: injection_tests.rs  manual_tests.rs  mod.rs
crates/app-state/src/tests/readonly/: injection_tests.rs  manual_tests.rs
examples/: Cargo.toml
examples/src/: main.rs
