[package]
name = "app-state-macros"
version = "0.1.0"
authors = ["MarkusJx <28785953+MarkusJx@users.noreply.github.com>"]
description = "Macros for the app-state crate"
keywords = ["proc_macro", "procmacro"]
license-file = "../../LICENSE"
repository = "https://github.com/MarkusJx/app-state"
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["fold", "full", "extra-traits"] }
rand = "0.8.5"
