[package]
name = "app-state"
version = "0.1.0"
authors = ["MarkusJx <28785953+MarkusJx@users.noreply.github.com>"]
repository = "https://github.com/MarkusJx/app-state"
description = "Thread-safe, mutable application states for rust"
license-file = "../../LICENSE"
edition = "2021"

[dependencies]
app-state-macros = { path = "../app-state-macros", version = "0" }
log = { version = "0.4", optional = true }

[dev-dependencies]
ctor = "0"

[features]
log = ["app-state-macros/log", "dep:log"]